--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     ],
     "prefer-stable": true,
-    "minimum-stability": "dev", 
+    "minimum-stability": "dev",
     "require": {
         "php": ">=7.2.0",
-        "cakephp/cakephp": "4.x-dev as 4.0.0",
+        "cakephp/cakephp": ">=4.0.0",
         "cakephp/plugin-installer": "^1.0.0",
         "knplabs/gaufrette": "^0.7.0|^0.8.0"
     },
@@ -68,7 +68,7 @@
         "psalm": "psalm --show-info=false",
         "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.11 vimeo/psalm:^3.0 && mv composer.backup composer.json",
         "rector": "rector process src/",
-        "rector-setup": "cp composer.json composer.backup && composer require --dev rector/rector:^0.4.11 && mv composer.backup composer.json", 
+        "rector-setup": "cp composer.json composer.backup && composer require --dev rector/rector:^0.4.11 && mv composer.backup composer.json",
         "test": "phpunit",
         "coverage-test": "phpunit --stderr --coverage-clover=clover.xml"
     }
